<resources>
    <string name="app_name">MVC</string>
    <string name="action_settings">Opzioni</string>
    <string name="title_activity_login">Accedi</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="action_sign_as_guest">Accedi come ospite</string>
    <string name="action_registration">Registrati</string>
    <string name="error_invalid_username">L\'username inserito non è valido</string>
    <string name="error_invalid_password">Password non valida</string>
    <string name="error_incorrect_password">La password inserita non è corretta</string>
    <string name="error_field_required">Campo obbligatorio</string>
    <string name="error_invalid_credentials">Credenziali errate</string>
    <string name="prompt_not_registered_text">Non sei registrato?</string>
    <string name="alert_offine_mode">E\' possibile effettuare il login usando le ultime credenziali usate nell\'applicazione
in modalità online, per visualizare le ultime informazioni memorizzate. In alternativa è possibile effettuare il login come utente ospite.</string>
    <string name="title_activity_registration">Registrati</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_surname">Cognome</string>
    <string name="prompt_age">Età</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_phone">Cellulare</string>
    <string name="prompt_repeatpassword">Ripeti password</string>
    <string name="action_registration_short">Registrati</string>
    <string name="error_invalid_email">L\'email inserita non è valida</string>
    <string name="error_invalid_mobilephone">Il numero di cellulare inserito non è valido</string>
    <string name="error_invalid_repeatpassword">Le password inserite non sono uguali</string>
    <string name="error_registration">Errore nel finalizzare la registrazione</string>
    <string name="error_existing_username">Username già utilizzato</string>
    <string name="error_lenght_name">max 50 caratteri</string>
    <string name="error_lenght_surname">max 50 caratteri</string>
    <string name="error_lenght_mobilephone">max 20 caratteri</string>
    <string name="error_lenght_email">max 50 caratteri</string>
    <string name="error_lenght_username">max 20 caratteri</string>
    <string name="error_lenght_password">max 20 caratteri</string>
    <string name="error_char_password">Deve contenere almeno 8 caratteri, di cui un numero, una lettera maiuscola ed una
        minuscola</string>
    <string name="toast_registration_ok">Registrazione effettuata</string>
    <string name="title_activity_home">Home</string>
    <string-array name="device_filter"><item>CC2650 SensorTag</item></string-array>
    <string name="bt_not_supported">Bluetooth non supportato</string>
    <string name="ble_not_supported">BLE non supportato</string>
    <string name="bt_turned_off">Bluetooth spento</string>
    <string name="pref_user">user</string>
    <string name="pref_session">session</string>
    <string name="DB_maps">[{\"building\":\"Ingengeria\",\"floor\":\"145\",\"idmap\":1,\"mapname\":\"ing_q145\",\"mapscale\":6.5,\"xref\":91,\"xrefpx\":256,\"yref\":484,\"yrefpx\":1448},{\"building\":\"Ingengeria\",\"floor\":\"150\",\"idmap\":2,\"mapname\":\"ing_q150\",\"mapscale\":6.1,\"xref\":63,\"xrefpx\":62,\"yref\":464,\"yrefpx\":1300},{\"building\":\"Ingengeria\",\"floor\":\"155\",\"idmap\":3,\"mapname\":\"ing_q155\",\"mapscale\":6.8,\"xref\":95,\"xrefpx\":269,\"yref\":487,\"yrefpx\":1466}]</string>
</resources>